<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_above="@+id/l"
       ></RelativeLayout>

    <RelativeLayout
        android:id="@+id/l"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/i"
            android:layout_width="match_parent"
            android:layout_height="100dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="60dp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/j"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/i">

            <RelativeLayout
                android:layout_width="40dp"
                android:layout_height="20dp"
                android:layout_centerHorizontal="true">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/circle" />
            </RelativeLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/line" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/j">

            <Button
                android:id="@+id/loginButton"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/radius_button"
                android:onClick="goLoginClicked"
                android:text="@string/login"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="30dp" />

            <RelativeLayout
                android:id="@+id/k"
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:layout_below="@+id/loginButton">

            </RelativeLayout>

            <Button
                android:id="@+id/registerButton"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_below="@+id/k"
                android:layout_centerHorizontal="true"
                android:background="@drawable/radius_button"
                android:onClick="registerClicked"
                android:text="@string/register"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="30dp" />
        </RelativeLayout>


    </RelativeLayout>
</LinearLayout>